fixed image overflow in create post

--- a/src/app/createPosts/createPosts.module.css
+++ b/src/app/createPosts/createPosts.module.css
@@ -27,6 +27,15 @@
   color: #555;
   text-align: center;
   cursor: pointer;
+  overflow: hidden;      
+  flex-shrink: 0; 
+}
+
+.preview {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 18px;
 }
 
 
